header title edit on mobile fixed

--- a/frontend/src/assets/styles/cmps/board/_board-header.scss
+++ b/frontend/src/assets/styles/cmps/board/_board-header.scss
@@ -6,6 +6,7 @@
   color: white;
   z-index: 1;
   gap: 6px;
+  overflow-x: hidden;
 
   form {
     margin: 0;
@@ -60,11 +61,11 @@
     position: relative;
     top: -11px;
     // text-align: center !important;
-    min-width: 280px !important;
+    min-width: 97vw !important;
     @include for-normal-layout {
       max-width: unset;
       overflow-x: unset;
-      min-width: 30px;
+      min-width: 30px  !important;
     }
     &.height-adjust {
       top: 1px;
